add oapi-codegen and bare minimal server implementation
